# truth-table

./: .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Questions.md  SECURITY.md  bench_all.sh  debug  justfile  output.txt  proof.pi  readme.md  rust-toolchain.toml  rustc-ice-2025-09-13T17_51_58-77490.txt  rustc-ice-2025-09-23T17_42_06-51694.txt  rustc-ice-2025-09-28T20_21_16-75373.txt  rustc-ice-2025-10-01T18_35_22-53186.txt  rustc-ice-2025-10-24T22_01_24-50546.txt  rustc-ice-2025-10-31T23_17_59-35671.txt  rustc-ice-2025-11-02T14_51_03-72919.txt  rustc-ice-2025-11-02T18_21_16-73854.txt  rustc-ice-2025-11-02T21_15_30-28501.txt  test.txt
arithmetic/: Cargo.toml
arithmetic/src/: activator.rs  col.rs  col_oracle.rs  ctx.rs  encoding.rs  errors.rs  ftype.rs  lib.rs  mod.rs  table.rs  table_oracle.rs  table_traits.rs
arithmetic/src/ff/: mod.rs  test.rs
arithmetic/src/mle/: mod.rs
col-toolbox/: Cargo.toml
col-toolbox-bench/: Cargo.toml
col-toolbox-bench/bench/no_dup/: bezout.rs
col-toolbox/src/: lib.rs  test.rs
col-toolbox/src/and_check/: mod.rs  test.rs
col-toolbox/src/bezout_based_multi_col_nodup/: bezout.rs  mod.rs  test.rs  utils.rs
col-toolbox/src/bezout_based_multi_col_supp_check/: mod.rs  test.rs
col-toolbox/src/binary_check/: mod.rs  test.rs
col-toolbox/src/contig_lex_sort_check/: mod.rs  test.rs
col-toolbox/src/contig_multi_col_sort_check/: mod.rs  test.rs
col-toolbox/src/contiguous_activator_check/: mod.rs  test.rs
col-toolbox/src/defragger/: mod.rs
col-toolbox/src/fold_check/: mod.rs  test.rs
col-toolbox/src/inclusion_check/: mod.rs  test.rs  utils.rs
col-toolbox/src/keyed_sumcheck/: honest_prover.rs  mod.rs  test.rs
col-toolbox/src/local_single_col_sort_check/: mod.rs  test.rs
col-toolbox/src/lookup/: mod.rs  test.rs
col-toolbox/src/multi_col_supp_check/: mod.rs
col-toolbox/src/multiplicity_check/: honest_prover.rs  mod.rs  test.rs
col-toolbox/src/no_dup_check/: bezout.rs  mod.rs  test.rs  utils.rs
col-toolbox/src/no_zeros_check/: mod.rs  test.rs
col-toolbox/src/or_check/: mod.rs  test.rs
col-toolbox/src/perm_check/: mod.rs  test.rs
col-toolbox/src/predicate_limit_check/: mod.rs  test.rs
col-toolbox/src/prescribed_permutation_check/: mod.rs  test.rs
col-toolbox/src/rematerialize_check/: mod.rs  test.rs
col-toolbox/src/set_intersec/: mod.rs  test.rs
col-toolbox/src/sign_check/: mod.rs  test.rs  utils.rs
col-toolbox/src/sort_based_multi_col_nodup/: mod.rs  test.rs
col-toolbox/src/sort_based_multi_col_supp_check/: mod.rs  test.rs
col-toolbox/src/sort_check/: mod.rs  test.rs
col-toolbox/src/supp_check/: mod.rs  test.rs  utils.rs
col-toolbox/src/util/: multiplicity_count.rs
col-toolbox/src/zero_expr_check/: mod.rs  test.rs
crates/tt-arithmetic/: Cargo.toml
crates/tt-arithmetic/src/: col.rs  col_oracle.rs  encoding.rs  errors.rs  lib.rs  table.rs  table_oracle.rs
crates/tt-core/: Cargo.toml
crates/tt-core/src/: ctx_oracles.rs  errors.rs  lib.rs  test_display.rs
crates/tt-exec/: Cargo.toml
crates/tt-exec/benches/: benches.rs
crates/tt-exec/examples/: quickstart.rs
crates/tt-exec/src/: backend.rs  commit.rs  lib.rs  paths.rs  prove.rs  setup.rs  stats_jsonl.rs  test_utils.rs  tracing_setup.rs  (+1 more)
crypto/: Cargo.toml
crypto/src/: lib.rs
dbsnark-core/: Cargo.toml
dbsnark-core/benches/: prover.rs  verifier.rs
dbsnark-core/src/: id.rs  lib.rs  test_display.rs  test_utils.rs
dbsnark-core/tests/: tpch_q1.rs  tpch_q2.rs  tpch_q3.rs
exec/: Cargo.toml  benches.json  proof.pi  tpch_constraints.json
exec/benches/: benches.rs  pipeline.rs  prover.rs  verifier.rs
exec/src/: commit.rs  lib.rs  prove.rs  runtime.rs  setup.rs  structs.rs  test_utils.rs  verify.rs
exec/tests/: aggregate.rs  filter.rs  join.rs  project.rs  sort.rs  tpch.rs  tpch1.rs  tpch_q1.rs
field-adapter/: Cargo.toml
field-adapter/src/: lib.rs
front-end/: Cargo.toml
front-end/benches/: witness_plan.rs
front-end/src/: data_owner.rs  lib.rs  logical_plan_codec.rs  prover.rs  shared.rs  structs.rs  test_utils.rs  verifier.rs
front-end/tests/: end-to-end.rs  prover_smoke.rs
kit/: Cargo.toml
kit/src/: lib.rs
planner/: Cargo.toml
planner/benches/: witness_plan.rs
planner/src/: lib.rs  test_utils.rs
planner/tests/: logical_plan_graphviz.rs
proof-planner/: Cargo.toml
proof-planner/src/: lib.rs
proof-planner/tests/: create_proof_plan.rs
ra-toolbox/: Cargo.toml  trace.jsonl
ra-toolbox-bench/: Cargo.toml
ra-toolbox-bench/benches/: bench.rs  setup.rs
ra-toolbox-bench/src/: lib.rs
ra-toolbox/src/: lib.rs  utils.rs
sql-toolbox-bench/: Cargo.toml
sql-toolbox-bench/imdb_parquet/: null-remover.py
sql-toolbox-bench/src/: lib.rs
sumcheck/: Cargo.toml
sumcheck/src/: errors.rs  lib.rs  structs.rs
third-party-bench/: Cargo.toml  README.md  parse_bench_output.py  run_all.sh
third-party-bench/benches/: qedb.rs  sxt_proof_of_sql.rs  truth_table.rs
third-party-bench/src/: lib.rs
tpch-data/: Cargo.toml  README.md
tpch-data/bench-data/: constraints.json  customer.oracle  lineitem.oracle  nation.oracle
tpch-data/src/: lib.rs
tpch-data/test-data/: customer.oracle  customer.parquet  lineitem.oracle  lineitem.parquet  nation.oracle  nation.parquet  orders.oracle  orders.parquet  part.oracle  part.parquet  partsupp.oracle  partsupp.parquet  region.oracle  region.parquet  supplier.oracle  supplier.parquet
transcript/: Cargo.toml
transcript/src/: errors.rs  lib.rs
truthtable-core/: Cargo.toml
truthtable-core/src/: ctx_oracles.rs  errors.rs  lib.rs  test_display.rs  test_utils.rs  tree.rs
tt-col-toolbox/: Cargo.toml
tt-core/: Cargo.toml
tt-core/src/: ctx_oracles.rs  lib.rs  test_display.rs
tt-exec/: Cargo.toml  readme.md
tt-exec/benches/: benches.rs
tt-exec/src/: commit.rs  lib.rs  paths.rs
tt-front-end/: Cargo.toml
tt-front-end/src/: data_owner.rs  lib.rs  prover.rs  structs.rs
tt-proof-planner/: Cargo.toml
tt-tpch-data/: Cargo.toml
zksql-macros/: Cargo.toml
zksql-macros/src/: lib.rs
zksql-macros/tests/: same.rs
(+1729 files in other folders)
