[workspace]
resolver = "3"
edition = "2024"
members = [
    "col-toolbox",
    "arithmetic",
    "ra-toolbox",
    # "tpch-data",
    # "exec",
    "truthtable-core",
    # "proof-planner",
]

# Add dependencies here

[workspace.dependencies]

# Arkworks dependencies
ark-serialize = { version = "0.5.0", default-features = false, features = [
    "derive",
] }
ark-std = { version = "0.5.0" }
ark-ff = { version = "0.5.0" }
ark-ec = { version = "0.5.0" }
ark-poly = { version = "0.5.0" }
ark-piop = { git = "https://github.com/alireza-shirzad/ark-piop" }
ark-test-curves = { version = "0.5.0", features = ["bls12_381_curve"] }
# Other dependencies
anyhow = "1"
arrow = { version = "56", default-features = false }
arrow-cast = "57"
arrow-schema = "57"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
datafusion = { version = "46.0.1", default-features = false, features = [
    "serde",
    "parquet",
] }
datafusion-common = { version = "46.0.1" }
datafusion-expr = { version = "46.0.1" }
datafusion-functions-aggregate = "46.0.1"
datafusion-functions-window = "46.0.1"
derivative = { version = "2", features = ["use_core"] }
divan = "0.1.17"
duckdb = { version = "1.3.2", default-features = false, features = ["bundled"] }
either = "1.8.0"
once_cell = "1.19"
futures = "0.3"
indexmap = "2.2"
itertools = "0.14"
libc = "0.2"
log = "0.4"
merlin = { version = "3.0.0", default-features = false }
num-bigint = "0.4"
parquet = { version = "56", features = ["arrow"], default-features = false }
rand_chacha = { version = "0.9.0", default-features = false }
rayon = { version = "1.5.2", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
thiserror = "2.0.11"
tokio = { version = "^1.41.0", features = ["rt", "macros", "rt-multi-thread"] }
tpchgen = "2.0.1"
tpchgen-arrow = "2.0.1"
tracing = { version = "0.1.37" }

[workspace.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "../docs-header.html"]

[patch.crates-io]
# ark-std = { git = "https://github.com/arkworks-rs/std" }


[workspace.metadata.cargo-alias]
test-all = "sh scripts/test.sh"
[profile.release]
incremental = true
