[package]
name = "arithmetic"
version = "0.1.0"
edition = "2021"

[features]
default = []
parallel = ["rayon"]

[dependencies]

# Arkworks dependencies
ark-ff = { workspace = true }
ark-std = { workspace = true }
ark-poly = { workspace = true }
ark-piop = { workspace = true }
# Other dependencies
datafusion = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
derivative = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
rayon = { workspace = true, optional = true }
