[package]
name = "arithmetic"
version = "0.1.0"
edition = "2021"

[features]
default = ["std", "parallel"]
std = []
parallel = [
    "ark-ff/parallel",
    "ark-serialize/parallel",
    "ark-piop/parallel",
]

[dependencies]

# Arkworks dependencies
ark-ff = { workspace = true }
ark-piop = { workspace = true }
ark-serialize = { workspace = true }
# Other dependencies
datafusion = { workspace = true }
thiserror = { workspace = true }
derivative = { workspace = true }
tracing = "0.1"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
ark-test-curves = { workspace = true }
