[package]
name = "col-toolbox-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
# Local dependencies
col-toolbox = { path = "../col-toolbox" }

# arkworks dependencies
ark-std = { workspace = true }
ark-ff = { workspace = true }
ark-poly = { workspace = true }
ark-piop = { workspace = true }

# Other dependencies
derivative = { workspace = true }
rayon = { workspace = true, optional = true }

[dev-dependencies]
ark-ec = { workspace = true }
ark-test-curves = { workspace = true }


[[bench]]
name = "bezout"
path = "bench/no_dup/bezout.rs"
harness = false

[features]
default = ["std", "parallel"]
std = [
    "col-toolbox/std",
    "ark-piop/std",
    "ark-ff/std",
    "ark-poly/std",
    "ark-std/std",
]
print-trace = ["ark-std/print-trace"]
parallel = [
    "std",
    "col-toolbox/parallel",
    "ark-piop/parallel",
    "ark-ff/parallel",
    "ark-poly/parallel",
    "ark-std/parallel",
    "rayon",
]

honest-prover = ["col-toolbox/honest-prover", "ark-piop/honest-prover"]
