[package]
name = "dbsnark-core"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-std = { workspace = true }
ark-ff = { workspace = true }
ark-piop = { workspace = true, features = ["test-utils"] }
ark-serialize = { workspace = true }
datafusion = { workspace = true }
datafusion-functions-window = "46.0.1"
datafusion-expr = "46.0.1"
thiserror = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
rayon = { workspace = true, optional = true }
arithmetic = { path = "../arithmetic" }
ra-toolbox = { path = "../ra-toolbox" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
parquet = { version = "54", default-features = false, features = ["arrow"] }
indexmap = { workspace = true }

[dev-dependencies]
divan.workspace = true
libc = "0.2"
tpch-data = { path = "../tpch-data" }
ark-test-curves.workspace = true


[features]
default = ["std", "parallel"]
std = []
parallel = [
    "std",
    "rayon",
    "ark-ff/parallel",
    "ark-serialize/parallel",
    "ark-piop/parallel",
    "arithmetic/parallel",
    "ark-std/parallel",
]
honest-prover = ["ra-toolbox/honest-prover", "ark-piop/honest-prover"]
test-utils = []

[[bench]]
name = "prover"
harness = false
[[bench]]
name = "verifier"
harness = false
