[package]
name = "exec"
version = "0.1.0"
edition = "2024"

[dependencies]
truthtable-core = { path = "../truthtable-core" }
proof-planner = { path = "../proof-planner" }
arithmetic = { path = "../arithmetic" }
ark-std = { workspace = true }
ark-piop = { workspace = true, features = ["test-utils"] }
ark-ff.workspace = true
ark-serialize = { workspace = true }
datafusion = { workspace = true, features = ["parquet"] }
tokio.workspace = true
ark-test-curves.workspace = true
anyhow = "1"
bincode = "1"
either.workspace = true
clap = { version = "4", features = ["derive", "env"] }
rayon = { workspace = true, optional = true }
indexmap = { workspace = true }
async-trait = "0.1"
tpch-data = { path = "../tpch-data" }
[dev-dependencies]
ark-test-curves.workspace = true
divan.workspace = true
tpch-data = { path = "../tpch-data" }
tempfile = "3"

[[bench]]
name = "prover"
harness = false

[[bench]]
name = "verifier"
harness = false

[features]
default = ["std", "parallel"]
std = []
parallel = [
    "std",
    "rayon",
    "ark-ff/parallel",
    "ark-serialize/parallel",
    "ark-piop/parallel",
    "arithmetic/parallel",
    "ark-std/parallel",

    "truthtable-core/parallel",
]
honest-prover = ["ark-piop/honest-prover", "truthtable-core/honest-prover"]
test-utils = ["truthtable-core/test-utils"]
