[package]
name = "exec"
version = "0.1.0"
edition = "2024"

[dependencies]
truthtable-core = { path = "../truthtable-core" }
proof-planner = { path = "../proof-planner" }
arithmetic = { path = "../arithmetic" }
ark-piop = { workspace = true, features = ["test-utils"] }
ark-ff.workspace = true
ark-serialize = { workspace = true }
datafusion = { workspace = true, features = ["parquet"] }
tokio.workspace = true
ark-test-curves.workspace = true
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
indexmap = { workspace = true }
async-trait = "0.1"
tpch-data = { path = "../tpch-data" }
tracing = { workspace = true }
[dev-dependencies]
ark-test-curves.workspace = true
divan.workspace = true
tpch-data = { path = "../tpch-data" }
tempfile = "3"

[[bench]]
name = "prover"
harness = false

# [[bench]]
# name = "verifier"
# harness = false

[features]
default = ["std", "parallel"]
std = []
parallel = [
    "std",
    "ark-ff/parallel",
    "ark-serialize/parallel",
    "ark-piop/parallel",
    "arithmetic/parallel",
    "truthtable-core/parallel",
]
honest-prover = ["ark-piop/honest-prover", "truthtable-core/honest-prover"]
test-utils = ["truthtable-core/test-utils"]
