[package]
name = "field-adapter"
version = "0.1.0"
edition = "2021"

# [dependencies]
# ark-ff = { version = "^0.5.0", default-features = false }
# ark-std = { version = "^0.5.0", default-features = false }
# rayon = { version = "1.5.2", default-features = false, optional = true }
# datafusion = "42.1.0"




# [features]
# default = ["parallel"]
# extensive_sanity_checks = []
# parallel = [
#     "rayon",
#     "ark-std/parallel",
#     "ark-ff/parallel",
# ]
