[package]
name = "front-end"
version = "0.1.0"
edition = "2021"

[dependencies]

datafusion = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
rayon = { workspace = true, optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
parquet = { version = "54", default-features = false, features = ["arrow"] }

[dev-dependencies]
env_logger.workspace = true
divan.workspace = true
libc = "0.2"


[features]
default = ["std", "parallel"]
std = []
parallel = ["std", "rayon"]
honest-prover = []
test-utils = []

[[bench]]
name = "witness_plan"
harness = false
