[package]
name = "front-end"
version = "0.1.0"
edition = "2021"

[dependencies]

# local dependencies
tt-core = { path = "../tt-core" }
arithmetic = { path = "../arithmetic" }
tpch-data = { path = "../tpch-data" }
proof-planner = { path = "../proof-planner" }

# arkworks dependencies
ark-ff = { workspace = true }
ark-piop = { workspace = true }
ark-serialize = { workspace = true }

# datafusion dependencies
datafusion = { workspace = true }
datafusion-common = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-proto = { workspace = true }
prost = { workspace = true }

# other dependencies
async-trait = { workspace = true }
tokio = { workspace = true }
indexmap = { workspace = true }
tracing = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }

[features]
honest-prover = ["tt-core/honest-prover"]

[dev-dependencies]
ark-test-curves = { workspace = true }
datafusion-functions-aggregate = { workspace = true }
ark-piop = { workspace = true, features = ["test-utils"] }
