[package]
name = "kit"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-serialize = { version = "0.5.0", default-features = false }
displaydoc = { version = "^0.2.3", default-features = false }
rayon = { version = "1.5.2", default-features = false, optional = true }
ark-std = { version = "0.5.0", default-features = false }
proc-macro-hack = "0.5"
derivative = { version = "2", features = ["use_core"] }



[features]
default = ["parallel"]
extensive_sanity_checks = []
parallel = ["rayon", "ark-std/parallel"]
print-trace = ["ark-std/print-trace"]
