[package]
name = "front-end"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = { workspace = true }
ark-piop = { workspace = true, features = ["test-utils"] }
datafusion = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
rayon = { workspace = true, optional = true }
arithmetic = { path = "../arithmetic" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
parquet = { version = "54", default-features = false, features = ["arrow"] }

[dev-dependencies]
divan.workspace = true
libc = "0.2"
tpch-data = { path = "../tpch-data" }
ark-test-curves.workspace = true


[features]
default = ["std", "parallel"]
std = []
parallel = ["std", "rayon", "arithmetic/parallel"]
honest-prover = []
test-utils = []

[[bench]]
name = "witness_plan"
harness = false
