[package]
name = "ra-toolbox-bench"
version = "0.1.0"
edition = "2024"

[dependencies]

# Local dependencies
ra-toolbox = { path = "../ra-toolbox" }
arithmetic = { path = "../arithmetic" }

# arkworks dependencies
ark-std = { workspace = true }
ark-ff = { workspace = true }
ark-poly = { workspace = true }
ark-serialize = { workspace = true }
ark-test-curves = { workspace = true }
ark-piop = { workspace = true }
# Other dependencies
datafusion = { workspace = true }
rayon = { workspace = true, optional = true }
tokio = { workspace = true }
divan = { workspace = true }
anyhow = "1.0.97"


[features]
default = ["std", "parallel"]
std = ["ark-piop/std", "ark-ff/std", "ark-poly/std", "ark-std/std"]
print-trace = ["ark-std/print-trace"]
parallel = [
    "std",
    "ark-piop/parallel",
    "ark-ff/parallel",
    "ark-poly/parallel",
    "ark-std/parallel",
    "rayon",
]
honest-prover = ["ark-piop/honest-prover", "ra-toolbox/honest-prover"]


[[bench]]
name = "bench"
harness = false
