[package]
name = "ra-toolbox"
version = "0.1.0"
edition = "2024"

[dependencies]
# Local dependencies
arithmetic = { path = "../arithmetic" }
col-toolbox = { path = "../col-toolbox" }
# arkworks dependencies
ark-std = { workspace = true }
ark-ff = { workspace = true }
ark-piop = { workspace = true }
# Other dependencies
derivative = { workspace = true }
datafusion = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
ark-ec = { workspace = true }
ark-test-curves = { workspace = true }
ark-piop = { workspace = true, features = ["test-utils"] }

[features]
default = ["std", "parallel"]
std = ["ark-piop/std", "col-toolbox/std", "ark-ff/std", "ark-std/std"]
parallel = [
    "std",
    "ark-piop/parallel",
    "col-toolbox/parallel",
    "ark-ff/parallel",
    "ark-std/parallel",
]
honest-prover = ["ark-piop/honest-prover", "col-toolbox/honest-prover"]
