[package]
name = "sumcheck"
version = "0.1.0"
edition = "2024"



[dependencies]
kit = { path = "../kit" }
arithmetic = { path = "../arithmetic" }
transcript = { path = "../transcript" }

[dev-dependencies]
ark-test-curves = { version = "0.5.0", default-features = false, features = [
    "bls12_381_scalar_field",
] }

[features]
default = ["parallel"]
# extensive sanity checks that are useful for debugging
extensive_sanity_checks = []
parallel = [
    "kit/parallel",
    "arithmetic/parallel",
    "transcript/parallel",
]
print-trace = ["kit/print-trace"]