[workspace]
members = ["."]
resolver = "2"



[env]
BLITZAR_BACKEND = "cpu"


[patch.crates-io]
arrow-arith = { path = "patches/arrow-arith-51.0.0" }

[package]
name = "tt-third-party-bench"
version = "0.1.0"
edition = "2024"
publish = false
autobenches = false

[dependencies]
proof-of-sql-benchlib = { path = "../../sxt-proof-of-sql/crates/proof-of-sql-benchlib" }
proof-of-sql = { path = "../../sxt-proof-of-sql/crates/proof-of-sql" }
qedb = { path = "../../qedb" }
tpch-data = { package = "tt-tpch-data", path = "../crates/tt-tpch-data" }
exec = { package = "tt-exec", path = "../crates/tt-exec" }
tokio = { version = "1", features = ["rt", "macros"] }
parquet = { version = "57" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-tree = "0.3"
arrow = { version = "57" }
chrono = "0.4"
serde_json = "1"

[[bench]]
name = "sxt_proof_of_sql"
harness = false

[[bench]]
name = "truth_table"
harness = false

[[bench]]
name = "qedb"
harness = false
