[workspace]
members = ["."]
resolver = "2"



[env]
BLITZAR_BACKEND = "cpu"


[patch.crates-io]
arrow-arith = { path = "patches/arrow-arith-51.0.0" }
ark-piop = { path = "../../ark-piop" }

[package]
name = "tt-third-party-bench"
version = "0.1.0"
edition = "2024"
publish = false
autobenches = false

[dependencies]
proof-of-sql-benchlib = { git = "https://github.com/Pratyush/sxt-proof-of-sql", branch = "main" }
proof-of-sql = { git = "https://github.com/Pratyush/sxt-proof-of-sql", branch = "main" }
qedb = { git = "https://github.com/alireza-shirzad/qedb", branch = "main" }
tpch-data = { package = "tt-tpch-data", path = "../crates/tt-tpch-data" }
exec = { package = "tt-exec", path = "../crates/tt-exec" }
front-end = { package = "tt-front-end", path = "../crates/tt-front-end" }
ark-piop = "0.1.0"
tokio = { version = "1", features = ["rt", "macros"] }
parquet = { version = "57" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-tree = "0.3"
arrow = { version = "57" }
chrono = "0.4"
serde_json = "1"
bincode = "1.3"
zstd = "0.13"

[[bench]]
name = "sxt_proof_of_sql"
harness = false

[[bench]]
name = "truth_table"
harness = false

[[bench]]
name = "qedb"
harness = false

[features]
default = []
# Swap the TruthTable benches' SNARK backend from BN254 to BLS12-381 by
# forwarding to tt-exec's bls12-381 feature.
bls12-381 = ["exec/bls12-381"]
