[package]
name = "tpch-data"
version = "0.1.0"
edition = "2024"

[dependencies]
tpchgen = { workspace = true }
tpchgen-arrow = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
duckdb = { workspace = true }
datafusion = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
