[package]
name = "truthtable-core"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-std = { workspace = true }
ark-ff = { workspace = true }
ark-piop = { workspace = true, features = ["test-utils"] }
ark-serialize = { workspace = true }
datafusion = { workspace = true }
datafusion-functions-window = "46.0.1"
datafusion-expr = "46.0.1"
thiserror = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
rayon = { workspace = true, optional = true }
arithmetic = { path = "../arithmetic" }
ra-toolbox = { path = "../ra-toolbox" }
tracing = "0.1"
indexmap = { workspace = true }
ark-test-curves.workspace = true
tpch-data = { path = "../tpch-data", optional = true }
arrow-cast = "57"
arrow-schema = "57"
[dev-dependencies]
divan.workspace = true
libc = "0.2"
tpch-data = { path = "../tpch-data" }


[features]
default = ["std", "parallel"]
std = []
parallel = [
    "std",
    "rayon",
    "ark-ff/parallel",
    "ark-serialize/parallel",
    "ark-piop/parallel",
    "arithmetic/parallel",
    "ark-std/parallel",
]
honest-prover = ["ra-toolbox/honest-prover", "ark-piop/honest-prover"]
test-utils = ["tpch-data"]
