[package]
name = "tt-core"
version = "0.1.0"
edition = "2024"

[dependencies]

# local dependencies
arithmetic = { path = "../arithmetic" }
col-toolbox = { path = "../col-toolbox" }
tpch-data = { path = "../tpch-data", optional = true }

# arkworks dependencies
ark-std = { workspace = true }
ark-ff = { workspace = true }
ark-poly = { workspace = true }
ark-piop = { workspace = true, features = ["test-utils"] }
ark-serialize = { workspace = true }
ark-test-curves = { workspace = true }

# datafusion dependencies
datafusion = { workspace = true }
datafusion-functions-window = { workspace = true }
datafusion-functions-aggregate = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-common = { workspace = true }

# other dependencies
thiserror = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
rayon = { workspace = true, optional = true }
tracing = { workspace = true }
indexmap = { workspace = true }
arrow-cast = { workspace = true }
arrow-schema = { workspace = true }
derivative = { workspace = true }
either = { workspace = true }
[dev-dependencies]
divan = { workspace = true }
libc = { workspace = true }
tpch-data = { path = "../tpch-data" }
datafusion-functions-aggregate = { workspace = true }


[features]
default = ["std", "parallel"]
std = []
parallel = [
    "std",
    "rayon",
    "ark-ff/parallel",
    "ark-serialize/parallel",
    "ark-piop/parallel",
    "arithmetic/parallel",
    "ark-std/parallel",
]
honest-prover = ["ark-piop/honest-prover", "col-toolbox/honest-prover"]
test-utils = ["tpch-data"]
